<?xml version="1.0"?>
<package>
  <name>teleop_twist_keyboard</name>
  <version>1.0.0</version>
  <description>Keyboard teleop for the Butler robot</description>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
</package>
